Closed
Bug 1335365
Opened 9 years ago
Closed 9 years ago
Add telemetry to see if we can remove XHR.reponseType moz-blob
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: baku, Assigned: baku)
References
Details
Attachments
(3 files, 1 obsolete file)
|
2.79 KB,
patch
|
benjamin
:
review+
jcristau
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
3.13 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.34 KB,
patch
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•9 years ago
|
||
Assignee: nobody → amarchesini
Attachment #8831999 -
Flags: review?(bugs)
Comment 2•9 years ago
|
||
Comment on attachment 8831999 [details] [diff] [review]
xhr_telemetry.patch
why
"expires_in_version": "never", ?
Collecting just some time should be enough. FF54 or FF55?
So the idea is to detect whether anyone uses moz-blob and just collect the submission numbers, not compare use of moz-blob to others?
I think we should add telemetry for all the moz-* types
http://searchfox.org/mozilla-central/rev/4e0c5c460318fb9ef7d92b129ac095ce04bc4795/dom/webidl/XMLHttpRequest.webidl#26-28
With that, r+, but bsmedberg may have an opinion.
Attachment #8831999 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8831999 -
Attachment is obsolete: true
Attachment #8832040 -
Flags: review?(benjamin)
Comment 4•9 years ago
|
||
Comment on attachment 8832040 [details] [diff] [review]
xhr_telemetry.patch
These can be count histograms instead of booleans (you never record `false` so the bool is unnecessary).
Just a note for the record that since telemetry.mozilla.org doesn't show the opt-out data, you'll need to use a custom query to get the release data. And getting the release data is important for this because beta isn't representative for many webcompat questions.
I did not review the code.
Attachment #8832040 -
Flags: review?(benjamin) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a08d65d594ba
Add telemetry to see if we can remove moz-only XHR.reponseType, r=smaug, data-review=bsmedberg
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/683b87b736e9
Add telemetry to see if we can remove moz-only XHR.reponseType, r=me CLOSED TREE
Comment 7•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/a08d65d594ba
https://hg.mozilla.org/mozilla-central/rev/683b87b736e9
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Assignee | ||
Comment 8•9 years ago
|
||
Comment on attachment 8832040 [details] [diff] [review]
xhr_telemetry.patch
Approval Request Comment
[Feature/Bug causing the regression]: None. We would like to have results quickly
[User impact if declined]: none
[Is this code covered by automated tests?]: no needs.
[Has the fix been verified in Nightly?]: no needs.
[Needs manual test from QE? If yes, steps to reproduce]: no needs.
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: it adds some telemetry IDs. These are useful to know if we can get rid of mozilla-only XHR response types.
[String changes made/needed]: none
Attachment #8832040 -
Flags: approval-mozilla-beta?
Comment 9•9 years ago
|
||
I guess this wants to go in aurora as well, since it's set to expire in 58, not 53?
Flags: needinfo?(amarchesini)
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(amarchesini)
Attachment #8832040 -
Flags: approval-mozilla-aurora?
Comment 10•9 years ago
|
||
Comment on attachment 8832040 [details] [diff] [review]
xhr_telemetry.patch
new telemetry probes, aurora53+, beta52+
Attachment #8832040 -
Flags: approval-mozilla-beta?
Attachment #8832040 -
Flags: approval-mozilla-beta+
Attachment #8832040 -
Flags: approval-mozilla-aurora?
Attachment #8832040 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 12•9 years ago
|
||
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 13•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Attachment #8832472 -
Attachment is patch: true
Comment 14•9 years ago
|
||
| bugherder uplift | ||
status-firefox53:
--- → fixed
Comment 15•9 years ago
|
||
| bugherder uplift | ||
status-firefox52:
--- → fixed
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•