Bug 1335365 - Add telemetry to see if we can remove moz-only XHR.reponseType, r=smaug, data-review=bsmedberg